--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@ td{
     border: outset 5px  !important;
 }
 tr:hover{
-    background-color: rgb(0, 183, 255);
-    color: white;
+    /* background-color: rgb(0, 183, 255);
+    color: white; */
     cursor: pointer;
 }
 th{
